<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CategoryFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/upper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="Category"
            android:textAlignment="center"
            android:fontFamily="@font/abhaya_libre_bold"
            android:textColor="@color/sky_blue"
            android:textSize="45dp"
            android:textStyle="bold" />
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_below="@id/header"
            android:background="@color/black"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            />
    </RelativeLayout>
       <RelativeLayout
           android:layout_below="@id/upper"
           android:layout_width="match_parent"
           android:layout_height="match_parent">
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:rowCount="3"
                android:columnCount="3"
                android:layout_margin="10dp"
                >
                <androidx.cardview.widget.CardView
                    android:id="@+id/politics"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#795548"
                    app:cardElevation="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardUseCompatPadding="true"
                    >
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:orientation="vertical"
                        android:gravity="center"
                        >
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/politics"
                            android:layout_marginTop="4dp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/ghost_white"
                            android:text="@string/politics"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:fontFamily="@font/abhaya_libre_bold"

                            />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/world"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/green"
                    app:cardElevation="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardUseCompatPadding="true"
                    >
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:orientation="vertical"
                        android:gravity="center"
                        >
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/world"
                            android:layout_marginTop="4dp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/ghost_white"
                            android:text="@string/world"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:fontFamily="@font/abhaya_libre_bold"

                            />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/entertainment"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#7E57C2"
                    app:cardElevation="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardUseCompatPadding="true"
                    >
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:orientation="vertical"
                        android:gravity="center"
                        >
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/entertainment"
                            android:layout_marginTop="4dp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/ghost_white"
                            android:text="@string/entertainment"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:fontFamily="@font/abhaya_libre_bold"

                            />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/recent"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/card_color_green"
                    app:cardElevation="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardUseCompatPadding="true"
                    >
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:orientation="vertical"
                        android:gravity="center"
                        >
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/recent_news"
                            android:layout_marginTop="4dp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/ghost_white"
                            android:text="@string/recent"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:fontFamily="@font/abhaya_libre_bold"

                            />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/sports"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/dark_orange"
                    app:cardElevation="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardUseCompatPadding="true"
                    >
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:orientation="vertical"
                        android:gravity="center"
                        >
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ball"
                            android:layout_marginTop="4dp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/ghost_white"
                            android:text="@string/sports"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:fontFamily="@font/abhaya_libre_bold"

                            />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/travel"
                    android:layout_row="1"
                    android:layout_column="2"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/pink"
                    app:cardElevation="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardUseCompatPadding="true"
                    >
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:orientation="vertical"
                        android:gravity="center"
                        >
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/travel"
                            android:layout_marginTop="4dp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/ghost_white"
                            android:text="@string/travel"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:fontFamily="@font/abhaya_libre_bold"

                            />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/health"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/yellow"
                    app:cardElevation="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardUseCompatPadding="true"
                    >
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:orientation="vertical"
                        android:gravity="center"
                        >
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/health"
                            android:layout_marginTop="4dp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/ghost_white"
                            android:text="@string/health"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:fontFamily="@font/abhaya_libre_bold"

                            />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/technology"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/medium_blue"
                    app:cardElevation="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardUseCompatPadding="true"
                    >
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:orientation="vertical"
                        android:gravity="center"
                        >
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/tech"
                            android:layout_marginTop="4dp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/ghost_white"
                            android:text="@string/tech"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:fontFamily="@font/abhaya_libre_bold"

                            />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/business"
                    android:layout_row="2"
                    android:layout_column="2"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/slight_dark_green"
                    app:cardElevation="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardUseCompatPadding="true"
                    >
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:orientation="vertical"
                        android:gravity="center"
                        >
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/business"
                            android:layout_marginTop="4dp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/ghost_white"
                            android:text="@string/business"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:fontFamily="@font/abhaya_libre_bold"

                            />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </GridLayout>
       </RelativeLayout>
    </RelativeLayout>
</layout>